--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>To do App</title>
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" media="screen" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/estilos.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/font-awesome.css">
-	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-	<link rel="icon" type="image/jpg" href="/img/icono.jpg" />
-	<title>Lista de Tareas</title>
+
 </head>
 <body>
 	<div class="principal">
 		<div class="wrap">
-		<h1 class="titulo"> App Agenda de Tareas </h1>
+			<h1 class="titulo"> App Agenda de Tareas </h1>
 			<form class="formulario">
-				<textarea type= "text" id="tarea" placeholder="Agregar una tarea"></textarea><br><br>
-				<input type="button" class="boton" id="btnNuevaTarea" value="Agregar Tarea">
+				<textarea type="text" id="tarea" placeholder="Agregar una tarea"></textarea>
+				<br>
+				<br>
+				<button type="button" id="btnNuevaTarea" class="btn btn-default"> + Agregar nueva Tarea</button>
 			</form>
 		</div>
 	</div>
-		<div class="wrap">
-			<div id="contenedor"></div>
-		</div>
-	<script src="js/app.js"></script>
-	<script type="text/javascript" src="js/jquery.js"></script>
+	<div class="wrap">
+		<div id="contenedor"></div>
+	</div>
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
