--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" media="screen" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/estilos.css">
-
+	<link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
 	<div class="principal">
 		<div class="wrap">
 			<h1 class="titulo"> App Agenda de Tareas </h1>
 			<form class="formulario">
-				<textarea type="text" id="tarea" placeholder="Agregar una tarea"></textarea>
+				<textarea  type="text" id="tarea" placeholder="Agregar una tarea"></textarea>
 				<br>
 				<br>
-				<button type="button" id="btnNuevaTarea" class="btn btn-default"> + Agregar nueva Tarea</button>
+				<button type="button" id="btnNuevaTarea" class="btn btn-default"> + Agregar nueva tarea</button>
 			</form>
 		</div>
 	</div>
 	<div class="wrap">
 		<div id="contenedor"></div>
 	</div>
+	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
