--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<textarea  type="text" id="tarea" placeholder="Agregar una tarea"></textarea>
 				<br>
 				<br>
-				<button type="button" id="btnNuevaTarea" class="btn btn-default"> + Agregar nueva tarea</button>
+				<button type="button" id="btnNuevaTarea" class="btn btn-default btn-primary"> + Agregar nueva tarea</button>
 			</form>
 		</div>
 	</div>
