--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="wrap">
 			<h1 class="titulo"> App Agenda de Tareas </h1>
 			<form class="formulario">
-				<textarea  type="text" id="tarea" placeholder="Agregar una tarea"></textarea>
+				<textarea  id="tarea" placeholder="Agregar una tarea"></textarea>
 				<br>
 				<br>
 				<button type="button" id="btnNuevaTarea" class="btn btn-default"> + Agregar nueva tarea</button>
