--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 				<textarea  id="tarea" placeholder="Agregar una tarea"></textarea>
 				<br>
 				<br>
-				<button type="button" id="btnNuevaTarea" class="btn btn-default"> + Agregar nueva tarea</button>
+				<button type="button" id="btnNuevaTarea" class="btn btn-default btn-primary"> + Agregar nueva tarea</button>
 			</form>
 		</div>
 	</div>
 	<div class="wrap">
-		<div id="contenedor"></div>
+	<div id="contenedor"></div>
 	</div>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
